<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   	android:orientation="vertical"
   	android:paddingLeft="10dp">
	<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
   	android:orientation="horizontal">
		<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    style="@style/LabelText"
	  	android:text="@string/list_gender"
	  	android:paddingRight="3pt"
	  	android:paddingLeft="15dip"
	    />
		<TextView 
		android:id="@+id/patientgender"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	  	android:text="TESTINFO"
	    />
	</LinearLayout>
	<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
   	android:orientation="horizontal">
		<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	  	style="@style/LabelText"
	  	android:text="@string/list_height"
	  	android:paddingRight="3pt"
	  	android:paddingLeft="15dip"
	    />
		<TextView 
		android:id="@+id/patientheight"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	  	android:text="63"
	    />
	   <TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	  	android:text="@string/list_height_measure"
	    />
	</LinearLayout>
	<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
   	android:orientation="horizontal">
		<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	  	style="@style/LabelText"
	  	android:text="@string/list_weight"
	  	android:paddingLeft="15dip"
	    />
		<TextView 
		android:id="@+id/patientweight"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	  	android:text="132"
	    />
	   <TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	  	android:text="@string/list_weight_measure"
	    />
	</LinearLayout>
	<LinearLayout 
	android:id="@+id/patientracemodule"
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
   	android:orientation="horizontal">
		<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	  	style="@style/LabelText"
	  	android:text="@string/list_race"
	  	android:paddingRight="3pt"
	  	android:paddingLeft="15dip"
	    />
		<TextView 
		android:id="@+id/patientrace"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	  	android:text="No Race Set"
	    />
	</LinearLayout>
	<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
   	android:orientation="horizontal">
		<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	  	style="@style/LabelText"
	  	android:text="@string/list_birthdate"
	  	android:paddingRight="3pt"
	  	android:paddingLeft="15dip"
	    />
		<TextView 
		android:id="@+id/patientbirthdate"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	  	android:text="TESTINFO"
	    />
	</LinearLayout>

</LinearLayout>